[gd_scene load_steps=10 format=3 uid="uid://bfaxr7fpoeug3"]

[ext_resource type="Script" path="res://common/scripts/finite_state_machine/fsm.gd" id="1_k4rsj"]
[ext_resource type="Script" path="res://boss/script/boss.gd" id="1_yay22"]
[ext_resource type="Script" path="res://boss/script/boss_idle.gd" id="2_dyrbb"]
[ext_resource type="Script" path="res://boss/script/boss_attack_state.gd" id="3_i27vb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_csltl"]
radius = 265.002

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_grs8v"]
radius = 67.0001
height = 410.0

[sub_resource type="Animation" id="Animation_xt3av"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodyParts/Torso:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodyParts/Head:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BodyParts/LeftArm:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BodyParts/RightArm:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("HitBox/HeadCollider:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(956, 282)]
}

[sub_resource type="Animation" id="Animation_58i06"]
resource_name = "idle"
length = 1.00001
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodyParts/Torso:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodyParts/Head:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BodyParts/LeftArm:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BodyParts/RightArm:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("HitBox/HeadCollider:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(956, 282), Vector2(848, 354), Vector2(801, 384), Vector2(850, 360), Vector2(962, 277), Vector2(1085, 357), Vector2(1148, 384), Vector2(1087, 341)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s66io"]
_data = {
"RESET": SubResource("Animation_xt3av"),
"idle": SubResource("Animation_58i06")
}

[node name="BossBase" type="Node2D"]
script = ExtResource("1_yay22")

[node name="FiniteState" type="Node2D" parent="." node_paths=PackedStringArray("current_state")]
script = ExtResource("1_k4rsj")
current_state = NodePath("Idle")

[node name="Idle" type="Node2D" parent="FiniteState" node_paths=PackedStringArray("possible_states")]
script = ExtResource("2_dyrbb")
possible_states = [NodePath("../HeadAttack"), NodePath("../ArmRightAttack"), NodePath("../ArmLeftAttack")]

[node name="HeadAttack" type="Node2D" parent="FiniteState"]
script = ExtResource("3_i27vb")

[node name="ArmRightAttack" type="Node2D" parent="FiniteState"]
script = ExtResource("3_i27vb")

[node name="ArmLeftAttack" type="Node2D" parent="FiniteState"]
script = ExtResource("3_i27vb")

[node name="HitBox" type="Area2D" parent="."]
z_index = 1
collision_layer = 2
collision_mask = 0

[node name="HeadCollider" type="CollisionShape2D" parent="HitBox"]
position = Vector2(956, 282)
shape = SubResource("CircleShape2D_csltl")

[node name="RightArmCollider" type="CollisionShape2D" parent="HitBox"]
position = Vector2(1600, 777)
rotation = -1.57079
shape = SubResource("CapsuleShape2D_grs8v")

[node name="LeftArmCollider" type="CollisionShape2D" parent="HitBox"]
position = Vector2(316, 777)
rotation = -1.57079
shape = SubResource("CapsuleShape2D_grs8v")

[node name="BodyParts" type="Node2D" parent="."]

[node name="Torso" type="AnimatedSprite2D" parent="BodyParts"]
centered = false

[node name="LeftArm" type="AnimatedSprite2D" parent="BodyParts"]
centered = false

[node name="RightArm" type="AnimatedSprite2D" parent="BodyParts"]
centered = false

[node name="Head" type="AnimatedSprite2D" parent="BodyParts"]
position = Vector2(1, 0)
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_s66io")
}
autoplay = "idle"
